# english-audio

./: .gitignore  README.md  cutphrase.command  extract_audio_by_srt.py  pyproject.toml
english_audio/: __init__.py.save  cli.py
english_audio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
